Fixing reddit url, and removing customer download section

--- a/download.html
+++ b/download.html
@@ -170,31 +170,6 @@
                             </table>
                         </div>
                 	</div>
-                	<div class="col-md-6">
-                		<div class="block">
-	                        <h3>Customer Release - Workstation</h3>
-	                        <p>Interested in the releases below, or a custom release for your workplace or organisation? Contact us at <a href="mailto:support@dapperlinux.com">support@dapperlinux.com</a>
-	                        <br>
-	                        <table>
-	                            <tr>
-	                                <td>
-	                                    <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-	                                     <a style="float: left;"><h3>Dapper Linux Stable [Customer]</h3></a>
-	                                </td>
-	                            </tr>
-	                            <tr>
-	                                <td>
-	                                    <p>2.2 GB ISO Image for x86_64 based personal computers</p>
-	                                </td>
-	                            </tr>
-	                            <tr>
-	                                <td>
-	                                    <p><a>sig</a> <a>sha1</a> <a>sha256</a></p>
-	                                </td>
-	                            </tr>
-	                        </table>
-	                    </div>
-                	</div>
                 </div>
                 <div class="row">
                 	<div class="col-md-6">
@@ -293,30 +268,6 @@
                                 </tr>
                             </table>
                 	</div>
-                	<div class="col-md-6">
-                		<div class="block">
-	                        <h3>Customer Release - Server</h3>
-	                        <p>Interested in the releases below, or a custom release for your workplace or organisation? Contact us at <a href="mailto:support@dapperlinux.com">support@dapperlinux.com</a>
-	                        <br>
-	                        <table>
-	                            <tr>
-	                                <td>
-	                                    <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-	                                     <a style="float: left;"><h3>Dapper Linux Server [Customer]</h3></a>
-	                                </td>
-	                            </tr>
-	                            <tr>
-	                                <td>
-	                                    <p>2.2 GB ISO Image for x86_64 based personal computers</p>
-	                                </td>
-	                            </tr>
-	                            <tr>
-	                                <td>
-	                                    <p><a>sig</a> <a>sha1</a> <a>sha256</a></p>
-	                                </td>
-	                            </tr>
-	                        </table>
-	                    </div>
                 		<div class="block">
                 			<h3>Source Code</h3>
 		                        <p>
@@ -376,7 +327,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.reddit.com/r/dapperlinux">
+                                <a href="https://www.reddit.com/u/dapperlinux">
                                     <img class="img-responsive" alt="" src="/images/icons/icon-4.svg" height="48" width=48">
                                 </a>
                             </li>
