--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
                             </p>
                             <h3>Contacting the Developers</h3>
                             <p>
-                            	We would like to hear from any users who especially like Dapper Linux, so reach out to us on <a href="https://twitter.com/dapperlinux">Twitter</a>, <a href="https://www.reddit.com/r/dapperlinux">Reddit</a>, <a href="https://www.facebook.com/dapperlinux">Facebook</a> or <a href="https://github.com/dapperlinux">Github</a>.<br><br>
+                            	We would like to hear from any users who especially like Dapper Linux, so reach out to us on <a href="https://twitter.com/dapperlinux">Twitter</a>, <a href="https://www.reddit.com/u/dapperlinux">Reddit</a>, <a href="https://www.facebook.com/dapperlinux">Facebook</a> or <a href="https://github.com/dapperlinux">Github</a>.<br><br>
                             You can email us at <a href="mailto:support@dapperlinux.com">support@dapperlinux.com</a>, or for any other queries such as custom editions of Dapper Linux for your workplace or organisation, or more information about the company and investment, contact Matthew Ruffell at <a href="mailto:matthew.ruffell@dapperlinux.com">matthew.ruffell@dapperlinux.com</a>
                             </p>
                             <h3>GPG Key</h3>
@@ -211,7 +211,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.reddit.com/r/dapperlinux">
+                                <a href="https://www.reddit.com/u/dapperlinux">
                                     <img class="img-responsive" alt="" src="/images/icons/icon-4.svg" height="48" width=48">
                                 </a>
                             </li>
