Changing email addresses to ruffell.nz ones

--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                             <h3>Contacting the Developers</h3>
                             <p>
                             	We would like to hear from any users who especially like Dapper Linux, so reach out to us on <a href="https://twitter.com/dapperlinux">Twitter</a>, <a href="https://www.reddit.com/u/dapperlinux">Reddit</a>, <a href="https://www.facebook.com/dapperlinux">Facebook</a> or <a href="https://github.com/dapperlinux">Github</a>.<br><br>
-                            You can email us at <a href="mailto:support@dapperlinux.com">support@dapperlinux.com</a>, or for any other queries such as custom editions of Dapper Linux for your workplace or organisation, or more information about the company and investment, contact Matthew Ruffell at <a href="mailto:matthew.ruffell@dapperlinux.com">matthew.ruffell@dapperlinux.com</a>
+                            You can email us at <a href="mailto:dapperlinux@ruffell.nz">dapperlinux@ruffell.nz</a>, or for any other queries such as custom editions of Dapper Linux for your workplace or organisation, or more information about the company and investment, contact Matthew Ruffell at <a href="mailto:dapperlinux@ruffell.nz">dapperlinux@ruffell.nz</a>
                             </p>
                             <h3>GPG Key</h3>
                             <p>
