--- a/patchset.html
+++ b/patchset.html
@@ -218,7 +218,7 @@
                             	Dapper Secure Kernel Patchset and Dapper Secure Kernel Patchset Stable are both licensed under the GPLv2, a copy of which can be found <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt">here</a>. The GPLv2 states that if you recieve a binary of the compiled software, the source code must also be provided, or a written offer for a copy of the source code provided.
                             </p>
                             <p>
-                            	This means if you have obtained or recieved a binary distribution of a kernel patched with Dapper Secure Kernel Patchset or Dapper Secure Kernel Patchset Stable, you are entitled to the corresponding source code of that release. If you find someone violating these conditions, send a message to <a href="mailto:support@dapperlinux.com">support@dapperlinux.com</a> and we will look into it.
+                            	This means if you have obtained or recieved a binary distribution of a kernel patched with Dapper Secure Kernel Patchset or Dapper Secure Kernel Patchset Stable, you are entitled to the corresponding source code of that release. If you find someone violating these conditions, let us know via the contact information on the <a href="/contact.html">contact page</a> and we will look into it.
                             </p>
                             <p>
                             	The beauty of open source is encased within the four freedoms mentioned by Richard Stallman.
