Moving download links from download.dapperlinux.com to amazon s3

--- a/download.html
+++ b/download.html
@@ -151,7 +151,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-28-2018-08-12.iso" style="float: left;"><h3>Dapper Linux 28 2018-08-12</h3></a>
+                                         <a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-28-2018-08-12.iso" style="float: left;"><h3>Dapper Linux 28 2018-08-12</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -162,9 +162,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-28-2018-08-12.iso.sig">sig</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-28-2018-08-12.iso.sha1.txt">sha1</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-28-2018-08-12.iso.sha256.txt">sha256</a></p>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-28-2018-08-12.iso.sig">sig</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-28-2018-08-12.iso.sha1.txt">sha1</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-28-2018-08-12.iso.sha256.txt">sha256</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -181,7 +181,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso" style="float: left;"><h3>Dapper Linux 27 2018-03-30</h3></a>
+                                         <a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-27-2018-03-30.iso" style="float: left;"><h3>Dapper Linux 27 2018-03-30</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -192,9 +192,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso.sig">sig</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso.sha1.txt">sha1</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso.sha256.txt">sha256</a></p>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-27-2018-03-30.iso.sig">sig</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-27-2018-03-30.iso.sha1.txt">sha1</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-27-2018-03-30.iso.sha256.txt">sha256</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -202,7 +202,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso" style="float: left;"><h3>Dapper Linux 26 2017-11-13</h3></a>
+                                         <a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-26-2017-11-13.iso" style="float: left;"><h3>Dapper Linux 26 2017-11-13</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -213,9 +213,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sig">sig</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha1.txt">sha1</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha256.txt">sha256</a></p>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-26-2017-11-13.iso.sig">sig</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-26-2017-11-13.iso.sha1.txt">sha1</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-26-2017-11-13.iso.sha256.txt">sha256</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -223,7 +223,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso" style="float: left;"><h3>Dapper Linux 25 2017-08-08</h3></a>
+                                         <a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-25-2017-08-08.iso" style="float: left;"><h3>Dapper Linux 25 2017-08-08</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -236,9 +236,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso.sig">sig</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso.sha1.txt">sha1</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso.sha256.txt">sha256</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-25-2017-08-08.iso.sig">sig</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-25-2017-08-08.iso.sha1.txt">sha1</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-25-2017-08-08.iso.sha256.txt">sha256</a>
                                         </p>
                                     </td>
                                 </tr>
@@ -247,7 +247,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso" style="float: left;"><h3>Dapper Linux 24 2016-10-24</h3></a>
+                                         <a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-24-2016-10-24.iso" style="float: left;"><h3>Dapper Linux 24 2016-10-24</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -260,9 +260,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso.sig">sig</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso.sha1.txt">sha1</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso.sha256.txt">sha256</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-24-2016-10-24.iso.sig">sig</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-24-2016-10-24.iso.sha1.txt">sha1</a>
+                                        	<a href="https://dapperlinux.s3.amazonaws.com/Dapper-Linux-Live-24-2016-10-24.iso.sha256.txt">sha256</a>
                                         </p>
                                     </td>
                                 </tr>
