Add blog post on speaking at linux.conf.au

--- a/blog.html
+++ b/blog.html
@@ -129,6 +129,10 @@
                                         <h3>Recent Posts</h3>
                                         <ul>
                                             <li>
+                                                <a href="/blog/speaking-about-dapper-secure-kernel-patchset-at-linux-conf-au.html">Speaking About Dapper Secure Kernel Patchset at Linux.conf.au</a><br>
+                                                <time>26 January 2019</time>
+                                            </li>
+                                            <li>
                                                 <a href="/blog/celebrating-100-releases-of-dapper-secure-kernel-patchset.html">Celebrating 100 Releases of Dapper Secure Kernel Patchset</a><br>
                                                 <time>03 September 2018</time>
                                             </li>
@@ -163,6 +167,24 @@
                             <div class="col-md-8">
                             <article>
                                     <div class="blog-post-image">
+                                        <a href="/blog/speaking-about-dapper-secure-kernel-patchset-at-linux-conf-au.html"><img class="img-responsive" src="/blog/images/post-8.png" alt="" /></a>
+                                    </div>
+                                    <div class="blog-content">
+                                        <h2 class="blogpost-title">
+                                        <a href="/blog/speaking-about-dapper-secure-kernel-patchset-at-linux-conf-au.html">Speaking about Dapper Secure Kernel Patchset at Linux.conf.au 2019</a>
+                                        </h2>
+                                        <div class="blog-meta">
+                                            <span>26 January 2019</span>
+                                            <span>by Matthew Ruffell</span>
+                                            <span>Thoughts</span>
+                                        </div>
+                                        <p>Recently, I was given the opportunity to speak at Linux.conf.au 2019 about my experience maintaining Dapper Secure Kernel Patchset. My talk, <a href="https://lca2019.linux.org.au/schedule/presentation/180/">Maintaining the Unmaintainable: Picking up the Baton of a Secure Kernel Patchset</a> is a good primer on how the patchset works, and was well received by the audience.
+                                        </p>
+                                        <a href="/blog/speaking-about-dapper-secure-kernel-patchset-at-linux-conf-au.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                    </div>
+                                </article>
+                            <article>
+                                    <div class="blog-post-image">
                                         <a href="/blog/celebrating-100-releases-of-dapper-secure-kernel-patchset.html"><img class="img-responsive" src="/blog/images/post-7.png" alt="" /></a>
                                     </div>
                                     <div class="blog-content">
@@ -192,7 +214,7 @@
                                             <span>by Matthew Ruffell</span>
                                             <span>Thoughts</span>
                                         </div>
-                                        <p>Dapper Linux Limited is pleased to annouce the release of Dapper Linux 28! Dapper Linux 28 is the next major revision of the flagship secure operating system developed by Dapper Linux Limited.
+                                        <p>Dapper Linux Limited is pleased to announce the release of Dapper Linux 28! Dapper Linux 28 is the next major revision of the flagship secure operating system developed by Dapper Linux Limited.
                                         </p>
                                         <a href="/blog/announcing-dapper-linux-28.html" class="btn btn-dafault btn-details">Continue Reading</a>
                                     </div>
